--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <header>
+    <h1>枯山水<span style = "display: block;" class="kilo">Rock Gardens</span></h1>
+    <nav>
+      <ul>
+        <li><a href="#">Viewing</a></li>
+        <li><a href="#">Gravel</a></li>
+        <li><a href="#">Symbolism</a></li>
+      </ul>
+      <img src="images/banner.svg" alt="">
+    </nav>
+  </header>
 
 
 </body>
