Add some changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>枯山水<span style = "display: block;" class="kilo">Rock Gardens</span></h1>
+    <h1>枯山水<span style = "display: block;" class="headersub">Rock Gardens</span></h1>
     <nav>
       <ul>
         <li><a href="#">Viewing</a></li>
