Add some changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,26 @@
       <img src="images/banner.svg" alt="">
     </nav>
   </header>
+  <main>
+    <article class="">
+      <section class="one">
+        <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+        <p class="p-one">Imitate the intimate essence of nature & discover the true meaning of life.</p>
+      </section>
+      <section class="two">
+        <div class="view">
 
+        </div>
+        <div class="gravel">
+
+        </div>
+        <div class="symbol">
+
+        </div>
+      </section>
+    </article>
+
+  </main>
 
 </body>
 </html>
