--- a/index.html
+++ b/index.html
@@ -27,18 +27,28 @@
       </section>
       <section class="two">
         <div class="view">
-
+          <img src="images/viewing.svg" alt="">
+          <h3>閲覧<span style = "display: block;" class="">Viewing</span></h3>
+          <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+          <a href="#">Learn more about Viewing</a>
         </div>
         <div class="gravel">
-
+          <img src="images/gravel.svg" alt="">
+          <h3>砂利<span style = "display: block;" class="">Gravel</span></h3>
+          <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+          <a href="#">Learn more about Gravel</a>
         </div>
         <div class="symbol">
-
+          <img src="images/symbolism.svg" alt="">
+          <h3>象徴主義<span style = "display: block;" class="">Symbolism</span></h3>
+          <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+          <a href="#">Learn more about Symbolism</a>
         </div>
       </section>
     </article>
-
   </main>
+
+  <footer>© 794 Heian Period</footer>
 
 </body>
 </html>
