--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     </article>
   </main>
 
-  <footer>© 794 Heian Period</footer>
+  <footer>
+    <p>© 794 Heian Period</p>
+  </footer>
 
 </body>
 </html>
