--- a/index.html
+++ b/index.html
@@ -25,22 +25,23 @@
         <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
         <p class="p-one">Imitate the intimate essence of nature & discover the true meaning of life.</p>
       </section>
+      <hr>
       <section class="two">
         <div class="view">
           <img src="images/viewing.svg" alt="">
-          <h3>閲覧<span style = "display: block;" class="">Viewing</span></h3>
+          <h3>閲覧<span style = "display: block;" class="spanh3">Viewing</span></h3>
           <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
           <a href="#">Learn more about Viewing</a>
         </div>
         <div class="gravel">
           <img src="images/gravel.svg" alt="">
-          <h3>砂利<span style = "display: block;" class="">Gravel</span></h3>
+          <h3>砂利<span style = "display: block;" class="spanh3">Gravel</span></h3>
           <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
           <a href="#">Learn more about Gravel</a>
         </div>
         <div class="symbol">
           <img src="images/symbolism.svg" alt="">
-          <h3>象徴主義<span style = "display: block;" class="">Symbolism</span></h3>
+          <h3>象徴主義<span style = "display: block;" class="spanh3">Symbolism</span></h3>
           <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
           <a href="#">Learn more about Symbolism</a>
         </div>
